# openSUSE

./: .files  .gitignore  .rev  .servicemark  0001-Add-changes-to-allow-coinstallation.patch  0001-Add-missing-QUrl-include-with-DBUILD_WITH_WEBENGINE.patch  0001-Add-missing-find_dependency-calls.patch  0001-Add-support-for-kernel-module-compression.patch  0001-CMakeLists-support-different-lib-dirs.patch  0001-Do-not-multithread-if-already-in-a-global-threadpool.patch  0001-Don-t-white-list-recent-Mesa-versions-for-multithrea.patch  0001-Fix-CVE-2021-31855.patch  0001-Fix-QToolButton-menus-showing-on-primary-screens-in-.patch  0001-Fix-aarch64-arm-detection.patch  0001-Fix-build-with-GCC-11-include-limits.patch  0001-Fix-build-with-Qt-5.15.patch  0001-Fix-overflow-check-for-wxUIntPtr-type.patch  0001-Fix-repotype-spelling.patch  0001-Fix-the-title-of-the-graph-showing-the-evolution-of-.patch  0001-Fix-wrong-to-linear-conversion.patch  0001-ICalFormat-don-t-shift-all-day-invite-dates-to-UTC.patch  0001-Ignore-802.1Q-frames.patch  0001-Include-a-user-agent-on-KNS-requests.patch  0001-Increase-file-version-number-to-430.patch  0001-Install-as-arch-independent.patch  0001-Lower-required-version-of-OpenSSL-to-1.1.0.patch  0001-Make-ZlibInStream-more-robust-against-failures.patch  0001-Only-import-attrdict-where-needed.patch  0001-Pass_version_to_meson_library.patch  0001-QWidget-setFocusProxy-adjust-focus-widget-properly.patch  0001-Remove-debug-message-to-avoid-polute-to-stdout.patch  0001-Remove-the-delegation-feature.patch  0001-Remove-use-of-imp-module-for-wx-GUI.patch  0001-Revert-Added-setting-for-battery-conservation-mode-L.patch  0001-Revert-Always-escape-the-table-names-when-creating-t.patch  0001-Revert-Blacklist-nouveau-and-llvmpipe-for-multithrea.patch  0001-Revert-Bump-version.patch  0001-Revert-Disable-reply-with-quote-text-as-this-bug-is-.patch  0001-Revert-Fix-text-rendering-regression-on-semi-transpa.patch  0001-Revert-QMenu-hide-when-a-QWidgetAction-fires-the-tri.patch  (+5914 more)
.github/: pull_request_template.md
000package-groups/: groups.yml  openSUSE-MicroOS-release.spec.in
000product/: dvd.group  openSUSE-Addon-NonOss-ftp-ftp-i586_x86_64.kiwi  openSUSE-Addon-NonOss.product  openSUSE-MicroOS-dvd5-dvd-x86_64.kiwi  openSUSE-MicroOS-dvd5-kubic-dvd-x86_64.kiwi  openSUSE-MicroOS.product  openSUSE-cd-mini-i586.kiwi  openSUSE-cd-mini-x86_64.kiwi  openSUSE-dvd5-dvd-i586.kiwi  openSUSE-dvd5-dvd-x86_64.kiwi  openSUSE-ftp-ftp-i586_x86_64.kiwi  openSUSE.product  opensuse_kubic.group  opensuse_microos.group  unsorted.yml
000release-packages/: openSUSE-Addon-NonOss-release.spec  openSUSE-MicroOS-release.spec  openSUSE-release.spec  weakremovers.inc
000update-repos/: 15.0:non-oss:update_1568093750.packages.xz  15.0:update_1566414150.packages.xz  15.0:update_1566587188.packages.xz  15.0:update_1566673399.packages.xz  15.0:update_1567019123.packages.xz  15.0:update_1567105629.packages.xz  15.0:update_1567191280.packages.xz  15.0:update_1567278676.packages.xz  15.0:update_1567450305.packages.xz  15.0:update_1567537195.packages.xz  15.0:update_1567621453.packages.xz  15.0:update_1567709237.packages.xz  15.0:update_1567882969.packages.xz  15.0:update_1567969282.packages.xz  15.0:update_1568054413.packages.xz  15.0:update_1568140369.packages.xz  15.1:non-oss:update_1568094105.packages.xz  15.1:update_1566402609.packages.xz  15.1:update_1566573892.packages.xz  15.1:update_1566670377.packages.xz  15.1:update_1567101681.packages.xz  15.1:update_1567268856.packages.xz  15.1:update_1567362512.packages.xz  15.1:update_1567448649.packages.xz  15.1:update_1567515194.packages.xz  15.1:update_1567585958.packages.xz  15.1:update_1567678212.packages.xz  15.1:update_1567867122.packages.xz  15.1:update_1567961715.packages.xz  15.1:update_1568048781.packages.xz  15.1:update_1568139032.packages.xz  factory:non-oss_1526.1.packages.xz  factory:non-oss_1530.2.packages.xz  factory:non-oss_1536.1.packages.xz  factory:non-oss_1542.2.packages.xz  factory:non-oss_1556.3.packages.xz  factory:non-oss_1564.2.packages.xz  factory:non-oss_1568.4.packages.xz  factory:non-oss_1572.3.packages.xz  factory:non-oss_1576.2.packages.xz  (+10 more)
0ad/: 0ad.changes  0ad.spec  _constraints
0ad-data/: 0ad-data.changes
2048-cli/: 2048-cli.changes
2ping/: 2ping.keyring  2ping.spec
389-ds/: 389-ds.changes  389-ds.spec
ASL/: ASL.changes  vtk-version.patch
AppCSXCAD/: AppCSXCAD.changes
AppStream/: AppStream.keyring
Botan/: Botan.changes
Box2D/: Box2D.changes  Box2D.spec
CSXCAD/: CSXCAD.changes
CharLS/: CharLS.spec
Coin/: Coin.patch
ColPack/: ColPack.spec
ColorFull/: ColorFull-rpmlintrc
Crystalcursors/: Crystalcursors.changes  Crystalcursors.spec
DVDStyler/: DVDStyler.changes  DVDStyler.spec
DisplayCAL/: DisplayCAL.changes  DisplayCAL.spec
FAudio/: FAudio.changes  FAudio.spec
FastCGI/: FastCGI-gcc44.patch  README.supervise
FlightGear/: FlightGear.changes  FlightGear.spec  _constraints
FlightGear-data/: FlightGear-data-rpmlintrc  FlightGear-data.changes  FlightGear-data.spec
FreeCAD/: 0001-find-openmpi2-include-files.patch  FreeCAD-test.changes  FreeCAD-test.spec  FreeCAD.changes  FreeCAD.obsinfo  FreeCAD.spec  FreeCADCmd.sh  FreeCAD_shared_mimeinfo  _constraints  _service
GeoIP/: README.SUSE
GraphicsMagick/: GraphicsMagick.changes  GraphicsMagick.spec
HSAIL-Tools/: _service  warning.patch
Herwig/: Herwig.changes  Herwig.spec
ImageMagick/: ImageMagick-configuration-SUSE.patch  ImageMagick.changes  ImageMagick.spec  baselibs.conf
KEALib/: KEALib.changes  KEALib.spec
LHAPDF/: LHAPDF-pdfset-download-url-update.patch  LHAPDF.changes  LHAPDF.spec  sover.diff
LibVNCServer/: cmake-libdir.patch
Mesa/: Mesa-drivers.spec  Mesa-rpmlintrc  Mesa.changes  Mesa.spec  README.updates  U_llvmpipe-Don-t-use-u_ringbuffer-for-lp_scene_queue.patch  pre_checkin.sh  (+2 more)
ghc-annotated-wl-pprint/: annotated-wl-pprint.cabal
ghc-cabal-doctest/: cabal-doctest.cabal  ghc-cabal-doctest.changes  ghc-cabal-doctest.spec
ghc-regex-applicative-text/: ghc-regex-applicative-text.spec  regex-applicative-text.cabal
(+13272 files in other folders)
