name:            digest
version:         0.0.1.4
x-revision: 1
copyright:       (c) 2009 Eugene Kirpichov
license:         BSD3
license-file:    LICENSE
author:          Eugene Kirpichov <ekirpichov@gmail.com>
maintainer:      Eugene Kirpichov <ekirpichov@gmail.com>
category:        Cryptography
synopsis:        Various hashes for bytestrings; CRC32 and Adler32 for now.
description:     This package provides efficient hash implementations for  
                 strict and lazy bytestrings. For now, CRC32 and Adler32 are supported; 
                 they are implemented as FFI bindings to efficient code from zlib.
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.10
tested-with:
    GHC==8.10.7
  , GHC==9.0.2
  , GHC==9.2.5
  , GHC==9.4.3

extra-source-files:
  testing/trivial-reference.c
  testing/trivial.expected
  testing/trivial.hs

source-repository head
  type: git
  location: https://github.com/TeofilC/digest

library
  exposed-modules: Data.Digest.CRC32,
                   Data.Digest.Adler32
  default-extensions: CPP, ForeignFunctionInterface
  default-language: Haskell2010
  build-depends: 
    base < 5
    , bytestring >= 0.9 && < 0.12
  includes:        zlib.h
  ghc-options:     -Wall
  if !os(windows)
    pkgconfig-depends: zlib
  else
    build-depends: zlib
