Name:                time-manager
Version:             0.0.0
x-revision: 1
Synopsis:            Scalable timer
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman and Kazu Yamamoto
Maintainer:          kazu@iij.ad.jp
Homepage:            http://github.com/yesodweb/wai
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           Stable
Description:         Scalable timer functions provided by a timer manager.

Library
  Build-Depends:     base                      >= 4.8        && < 5
                   , auto-update               >= 0.1.3
  Exposed-modules:   System.TimeManager
  Ghc-Options:       -Wall
