name:                cabal-doctest
version:             1.0.6
x-revision:          2
synopsis:            A Setup.hs helper for doctests running
description:
  Currently (beginning of 2017), there isn't @cabal doctest@
  command. Yet, to properly work doctest needs plenty of configuration.
  This library provides the common bits for writing custom Setup.hs

  See <https://github.com/haskell/cabal/issues/2327 Cabal/2327> for the progress
  of @cabal doctest@, i.e. whether this library is obsolete.

homepage:            https://github.com/phadej/cabal-doctest
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Oleg Grenrus
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md README.md
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.3,
  GHC==8.6.1

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-doctest

library
  exposed-modules:     Distribution.Extra.Doctest
  other-modules:
  other-extensions:
  build-depends:
    base >=4.3 && <4.13,
    Cabal >= 1.10 && <2.5,
    filepath,
    directory
  hs-source-dirs:      src
  default-language:    Haskell2010
